# python-starter

./: Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 648e057087da_initial.py
config/: database.py  types.py
models/: __init__.py  user.py
schemas/: user_schema.py
services/: user_service.py
tests/: conftest.py
tests/services/: test_user_services.py
tests/views/: conftest.py  test_user_views.py
utils/: request_utils.py
views/: user.py
